--- a/DUAL_Encoder.ioc
+++ b/DUAL_Encoder.ioc
@@ -3,6 +3,7 @@ Mcu.Family=STM32F1
 ProjectManager.MainLocation=Src
 FREERTOS.Queues01=advanceQueue,10,uint16_t,0,Dynamic,NULL,NULL
 ProjectManager.ProjectFileName=DUAL_Encoder.ioc
+PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 FREERTOS.Tasks01=mainTask,0,128,StartMainTask,Default,NULL,Dynamic,NULL,NULL;task_100ms,-3,128,Starttask_100ms,Default,NULL,Dynamic,NULL,NULL
 NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -15,14 +16,17 @@ USART1.BaudRate=4800
 RCC.PLLCLKFreq_Value=8000000
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 USART1.WordLength=WORDLENGTH_8B
+PA3.GPIO_PuPd=GPIO_NOPULL
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC13-TAMPER-RTC.Signal=GPIO_Output
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 ProjectManager.DefaultFWLocation=true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 ProjectManager.DeletePrevious=true
 USART1.IPParameters=VirtualMode,BaudRate,WordLength,Mode
-PA2.GPIOParameters=GPIO_Label
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA2.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
 SH.S_TIM2_CH1_ETR.ConfNb=1
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
@@ -59,6 +63,7 @@ Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PA0-WKUP
+GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 PA0-WKUP.GPIOParameters=GPIO_Label
@@ -105,6 +110,7 @@ Mcu.Package=LQFP48
 RCC.TimSysFreq_Value=8000000
 PA3.Locked=true
 NVIC.TimeBase=TIM1_UP_IRQn
+PA2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
