--- a/DUAL_Encoder.ioc
+++ b/DUAL_Encoder.ioc
@@ -49,6 +49,7 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 Mcu.ThirdPartyNb=0
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Mcu.IPNb=7
+TIM2.IPParameters=Period
 ProjectManager.PreviousToolchain=
 PA9.Signal=USART1_TX
 SH.S_TIM2_CH2.ConfNb=1
@@ -91,6 +92,7 @@ PA1.GPIO_Label=TIM2_B
 Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+TIM2.Period=65535
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
 PA13.Mode=Serial_Wire
